--- a/tracking.html
+++ b/tracking.html
@@ -3,6 +3,7 @@
 <head>
     <title>Galloners Club - Tracking</title>
     <meta charset="UTF-8">
+
     <style>
         body { margin:0; font-family:Arial; background:#f4f4f4; }
         header { background:#b30000; color:white; padding:15px; text-align:center; }
@@ -21,6 +22,25 @@
         .silver-btn { background:#9e9e9e; }
         .gold-btn { background:#d4af37; color:black; }
         .filter-btn { background:#222; }
+
+        .serial-box {
+            background:#f9f9f9;
+            border:1px solid #ccc;
+            padding:10px;
+            border-radius:6px;
+        }
+
+        .serial-item {
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            margin-bottom:6px;
+        }
+
+        .serial-item input {
+            padding:4px;
+            margin-right:5px;
+        }
     </style>
 </head>
 
@@ -36,6 +56,23 @@
 <input type="text" id="searchInput" placeholder="Search donor..." onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 
 <button class="top-btn" onclick="goDashboard()">Return to Dashboard</button>
+<br><br>
+
+<select id="bloodFilter" onchange="renderTable()">
+    <option value="">All Blood Types</option>
+    <option value="A">A</option>
+    <option value="B">B</option>
+    <option value="AB">AB</option>
+    <option value="O">O</option>
+</select>
+
+<br><br>
+
+<button class="galloner-btn" onclick="filterByCategory('galloner')">Galloners</button>
+<button class="bronze-btn" onclick="filterByCategory('bronze')">Bronze</button>
+<button class="silver-btn" onclick="filterByCategory('silver')">Silver</button>
+<button class="gold-btn" onclick="filterByCategory('gold')">Gold</button>
+<button class="filter-btn" onclick="renderTable()">Show All</button>
 
 <br><br>
 
@@ -56,18 +93,13 @@
 </div>
 
 <script type="module">
-
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import { getFirestore, collection, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig = {
-    apiKey: "AIzaSyByh0YJ11ZpbRV7EoDoLnqgFxe1r68efPI",
-    authDomain: "galloners-club.firebaseapp.com",
-    projectId: "galloners-club",
-    storageBucket: "galloners-club.firebasestorage.app",
-    messagingSenderId: "213049860421",
-    appId: "1:213049860421:web:4156aaa52b945f48711e2c",
-    measurementId: "G-XYXJH9JNXJ"
+  apiKey: "AIzaSyByh0YJ11ZpbRV7EoDoLnqgFxe1r68efPI",
+  authDomain: "galloners-club.firebaseapp.com",
+  projectId: "galloners-club",
 };
 
 const app = initializeApp(firebaseConfig);
@@ -77,15 +109,16 @@ let donors = [];
 
 async function loadDonors(){
     donors = [];
-    const querySnapshot = await getDocs(collection(db, "donors"));
-    querySnapshot.forEach((docSnap)=>{
+    const snapshot = await getDocs(collection(db, "donors"));
+    snapshot.forEach(docSnap=>{
         donors.push({ id: docSnap.id, ...docSnap.data() });
     });
     renderTable();
 }
 
-function renderTable(){
+function renderTable(category=null){
     let table = document.getElementById("donorTable");
+    let selectedBloodType = document.getElementById("bloodFilter").value;
     table.innerHTML = "";
 
     if(donors.length === 0){
@@ -96,27 +129,63 @@ function renderTable(){
     donors.forEach((donor,index)=>{
         let serialCount = donor.serials ? donor.serials.length : 0;
 
+        if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType) return;
+
         table.innerHTML += `
         <tr>
             <td>${index+1}</td>
             <td>${donor.firstName || ""} ${donor.middleName || ""} ${donor.surname || ""}</td>
             <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
             <td>${donor.contact || ""}</td>
-            <td>${serialCount}</td>
             <td>
+                ${serialCount}
+                <button class="view-btn" onclick="toggleSerial(${index})">View</button>
+            </td>
+            <td>
+                <button class="edit-btn" onclick="editDonor('${donor.id}')">Edit</button>
                 <button class="delete-btn" onclick="deleteDonor('${donor.id}')">Delete</button>
+            </td>
+        </tr>
+        <tr id="serialRow${index}" style="display:none;">
+            <td colspan="6">
+                <div class="serial-box" id="serialList${index}"></div>
             </td>
         </tr>
         `;
     });
 }
 
-window.deleteDonor = async function(id){
-    await deleteDoc(doc(db, "donors", id));
-    loadDonors();
+window.toggleSerial = function(index){
+    let row = document.getElementById("serialRow"+index);
+    let container = document.getElementById("serialList"+index);
+
+    if(row.style.display === "none"){
+        container.innerHTML = "";
+        let serials = donors[index].serials || [];
+        serials.forEach(s=>{
+            container.innerHTML += `<div>${s.serial} - ${s.date}</div>`;
+        });
+        row.style.display = "table-row";
+    } else {
+        row.style.display = "none";
+    }
 }
 
-window.searchDonor = function(){
+window.editDonor = function(id){
+    localStorage.setItem("editId", id);
+    window.location.href = "donor-entry.html";
+}
+
+window.deleteDonor = async function(id){
+    if(confirm("Are you sure you want to delete this donor?")){
+        await deleteDoc(doc(db, "donors", id));
+        loadDonors();
+    }
+}
+
+function filterByCategory(type){ renderTable(type); }
+
+function searchDonor(){
     let input = document.getElementById("searchInput").value.toLowerCase();
     let rows = document.querySelectorAll("#donorTable tr");
 
@@ -125,12 +194,9 @@ window.searchDonor = function(){
     });
 }
 
-window.goDashboard = function(){
-    window.location.href="dashboard.html";
-}
+function goDashboard(){ window.location.href="dashboard.html"; }
 
 loadDonors();
-
 </script>
 
 </body>
